Changed GreenLantern so size is in % and scales to screen size.

--- a/GreenLantern/index.html
+++ b/GreenLantern/index.html
@@ -5,12 +5,14 @@
         <link href="css/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="main-logo-circle">
-            <div id="line-top"></div>
-            <div id="outer-circle">
-                <div id="inner-circle"></div>
+        <div id="container">
+            <div id="main-logo-circle">
+                <div id="line-top"></div>
+                <div id="outer-circle">
+                    <div id="inner-circle"></div>
+                </div>
+                <div id="line-bottom"></div>
             </div>
-            <div id="line-bottom"></div>
         </div>
         
         <div id="me">
