Index page changed for animation

--- a/CaptainAmerica/index.html
+++ b/CaptainAmerica/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <div id="red-circle-outer">
+            <div id="red-circle-outer" class="rotate">
                 <div id="white-circle">
                     <div id="red-circle-inner">
                         <div id="blue-circle">
