Mayday parade added. Home sections are now dark.

--- a/index.html
+++ b/index.html
@@ -27,5 +27,15 @@
                 <p>The Avengers</p>
             </div>
         </section>
+        
+        <section class="section" id="jsSection">
+            <h2>Things Involving JavaScript</h2>
+            
+            <div class="logoItem">
+                <a href="Mayday/"><span></span></a>
+                <img src="img/blacklines.png" alt="Mayday Parade - Black Lines">
+                <p>Mayday Parade - Black Lines</p>
+            </div>
+        </section>
     </body>
 </html>
